# TP-GMM

./: .gitignore  pyproject.toml
examples/: example.ipynb  example_jax.ipynb  example_numpy.ipynb  example_torch.ipynb
tests/: benchmark_data.npy  test_arrays.py  test_backends.py  test_casting.py  test_file_system.py  test_geometry.py  test_runtime.py  test_stochastic.py
tpgmm/gmr/: gmr.py
tpgmm/jax/: __init__.py  gmr.py  tpgmm.py
tpgmm/numpy/: gmr.py  tpgmm.py
tpgmm/torch/: __init__.py  gmr.py  tpgmm.py
tpgmm/tpgmm/: tpgmm.py
tpgmm/utils/: arrays.py
