[project]
name = "tpgmm"
version = "0.2.0"
description = "Task Parameterized Gaussian Mixture Models with multiple computational backends"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tpgmm"]

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
]
jax = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]
examples = [
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
    "tqdm>=4.65.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
all = [
    "tpgmm[torch,jax,examples,dev]",
]
